[gd_scene load_steps=12 format=3 uid="uid://bld2lc2oj74ix"]

[ext_resource type="Script" path="res://Enemies/new_enemy_area.gd" id="1_sxkmq"]
[ext_resource type="Texture2D" uid="uid://bsnli5qvktoeq" path="res://Textures/Enemy/enemy_1_test_anim.png" id="1_tr261"]
[ext_resource type="PackedScene" uid="uid://dtbv2h63hij6" path="res://Utility/hurt_box.tscn" id="3_aaqvp"]
[ext_resource type="PackedScene" uid="uid://olluckrijwkt" path="res://Utility/hit_box.tscn" id="4_ktpm3"]
[ext_resource type="AudioStream" uid="uid://dc4c87bp0l2px" path="res://Audio/SoundEffect/enemy_hit_2.ogg" id="5_1e0l1"]
[ext_resource type="PackedScene" uid="uid://cxvhigdayluhq" path="res://Enemies/soft_collision.tscn" id="6_4k4t7"]

[sub_resource type="Animation" id="Animation_8yrwm"]
resource_name = "walk"
length = 0.6
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_e2onr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krp50"]
_data = {
"RESET": SubResource("Animation_e2onr"),
"walk": SubResource("Animation_8yrwm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_t6l4x"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_o2qej"]
radius = 5.09902

[node name="NewEnemyArea" type="Area2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_sxkmq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tr261")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_krp50")
}

[node name="HurtBox" parent="." instance=ExtResource("3_aaqvp")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_t6l4x")
debug_color = Color(1, 0.00392157, 0.0745098, 0.243137)

[node name="HitBox" parent="." instance=ExtResource("4_ktpm3")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_o2qej")

[node name="snd_enemy_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1e0l1")
pitch_scale = 2.0

[node name="HideTimer" type="Timer" parent="."]

[node name="SoftCollision" parent="." instance=ExtResource("6_4k4t7")]
position = Vector2(0, 1)

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2(0, 4)

[connection signal="area_entered" from="SoftCollision" to="." method="_on_soft_collision_area_entered"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="SoftCollision"]
